@@ -412,12 +412,7 @@
                             <div class="modal-body">
                                 
                                 <div class="row">
-                                    <div class="form-group col-sm-12 col-md-6 col-lg-6">
-                                        <label class="control-label" for="">Name:</label>
-                                        <br /> Chris Robertson
-                                    </div>
-
-                                    <div class="form-group col-sm-12 col-md-6 col-lg-6">
+                                    <div class="form-group col-sm-12 col-lg-12">
                                         <label class="requiredfield control-label" for="">Form in Question</label>
                                         <select data-placeholder="-- Select Form --" class="chosen-select-width" tabindex="">
                                             <option selected value="">Branch Rep Post Meeting</option>
@@ -433,7 +428,7 @@
                             </div>
 
                             <div class="modal-footer">
-                                <button id="cancel" name="cancel" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
+                                <button id="cancel" name="cancel" class="btn btn-default" data-dismiss="modal">Cancel</button>
                                 <button class="btn btn-primary" type="button" data-toggle="dropdown">Submit</button>
                             </div>
                         </div>
