@@ -1377,6 +1377,7 @@
                                                         <th>Message</th>
                                                         <th>Status</th>
                                                         <th>Date Submitted</th>
+                                                        <th>Date Closed</th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
@@ -1387,6 +1388,7 @@
                                                         <td data-title="Message">I was submitting the form and received...</td>
                                                         <td data-title="Status"><span class="statusBtn green">Open</span></td>
                                                         <td data-title="Date Submitted">1/26/2021</td>
+                                                        <td data-title="Date Closed">---</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
                                                                 <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
@@ -1399,6 +1401,7 @@
                                                         <td data-title="Message">What is the difference between the opt...</td>
                                                         <td data-title="Status"><span class="statusBtn green">Open</span></td>
                                                         <td data-title="Date Submitted">1/26/2021</td>
+                                                        <td data-title="Date Closed">---</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
                                                                 <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
@@ -1411,6 +1414,7 @@
                                                         <td data-title="Message">I had the following questions before I...</td>
                                                         <td data-title="Status"><span class="statusBtn green">Open</span></td>
                                                         <td data-title="Date Submitted">1/24/2021</td>
+                                                        <td data-title="Date Closed">---</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
                                                                 <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
@@ -1423,6 +1427,7 @@
                                                         <td data-title="Message">What is the difference between the opt...</td>
                                                         <td data-title="Status"><span class="statusBtn green">Open</span></td>
                                                         <td data-title="Date Submitted">1/21/2021</td>
+                                                        <td data-title="Date Closed">---</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
                                                                 <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
@@ -1435,6 +1440,7 @@
                                                         <td data-title="Message">I was submitting the form and received...</td>
                                                         <td data-title="Status"><span class="statusBtn green">Open</span></td>
                                                         <td data-title="Date Submitted">1/14/2021</td>
+                                                        <td data-title="Date Closed">---</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
                                                                 <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
@@ -1447,9 +1453,10 @@
                                                         <td data-title="Message">What is the difference between the opt...</td>
                                                         <td data-title="Status"><span class="statusBtn blue">Closed</span></td>
                                                         <td data-title="Date Submitted">8/4/2020</td>
+                                                        <td data-title="Date Closed">8/12/2020</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
-                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
+                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-closed" class="actionBlue"><i class="fa fa-eye"></i></a>
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -1459,9 +1466,10 @@
                                                         <td data-title="Message">I was submitting the form and received...</td>
                                                         <td data-title="Status"><span class="statusBtn blue">Closed</span></td>
                                                         <td data-title="Date Submitted">7/1/2020</td>
+                                                        <td data-title="Date Closed">7/3/2020</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
-                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
+                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-closed" class="actionBlue"><i class="fa fa-eye"></i></a>
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -1471,9 +1479,10 @@
                                                         <td data-title="Message">What is the difference between the opt...</td>
                                                         <td data-title="Status"><span class="statusBtn blue">Closed</span></td>
                                                         <td data-title="Date Submitted">6/12/2020</td>
+                                                        <td data-title="Date Closed">6/13/2020</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
-                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
+                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-closed" class="actionBlue"><i class="fa fa-eye"></i></a>
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -1483,9 +1492,10 @@
                                                         <td data-title="Message">I was submitting the form and received...</td>
                                                         <td data-title="Status"><span class="statusBtn blue">Closed</span></td>
                                                         <td data-title="Date Submitted">5/26/2020</td>
+                                                        <td data-title="Date Closed">5/27/2020</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
-                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
+                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-closed" class="actionBlue"><i class="fa fa-eye"></i></a>
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -1495,9 +1505,10 @@
                                                         <td data-title="Message">What is the difference between the opt...</td>
                                                         <td data-title="Status"><span class="statusBtn blue">Closed</span></td>
                                                         <td data-title="Date Submitted">5/21/2020</td>
+                                                        <td data-title="Date Closed">5/21/2020</td>
                                                         <td data-title="Action" class="actionBtn">
                                                             <div class="btn-cell">
-                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-view" class="actionBlue"><i class="fa fa-eye"></i></a>
+                                                                <a data-dismiss="modal" data-toggle="modal" data-target="#help-request-closed" class="actionBlue"><i class="fa fa-eye"></i></a>
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -1548,35 +1559,123 @@
                                     </div>
                                     <div class="modal-body">
                                         
-                                        <div class="row">
-                                            <div class="form-group col-sm-12 col-md-6 col-lg-6">
-                                                <label class="control-label" for="">Name:</label>
-                                                <br /> Chris Robertson
-                                            </div>
+                                        <div class="panel panel-default">
+                                           <div class="panel-heading" role="tab" id="heading1">
+                                              <h4 class="panel-title">
+                                                    <div class="row">
+                                                       <div class="col-lg-6">
+                                                          <strong class="panel-sub">Name: </strong>Chris Robertson
+                                                       </div>
+                                                       <div class="col-lg-6">
+                                                          <strong class="panel-sub">Form in Question: </strong> Branch Rep Post Meeting
+                                                       </div>
+                                                    </div>
+                                                 </a>
+                                              </h4>
+                                           </div>
 
-                                            <div class="form-group col-sm-12 col-md-6 col-lg-6">
-                                                <label class="control-label" for="">Form in Question</label><br />
-                                                Branch Rep Post Meeting
-                                            </div>
+                                           <div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
+                                              <div class="panel-body">
 
-                                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                                <label class="control-label" for="">Message</label> <br />
-                                                I was submitting the form and received the error contact administrator. I am contacting the administrator.
-                                            </div>
+                                                 <div class="panel-box">
+                                                    <h5>Chris Robertson 1/26/2021 at 12:28 PM</h5>
+                                                    <p>I was submitting the form and received the error contact administrator. I am contacting the administrator.</p>
+                                                 </div>
+
+                                                 <div class="panel-box">
+                                                    <h5>Bradley Webb 1/27/2021 at 9:28 AM</h5>
+                                                    <p>Can you try re-submitting the form now? We fixed one issue on our end and need to verify.</p>
+                                                 </div>
+
+                                                 <div class="panel-box">
+                                                    <h5>Chris Robertson 1/28/2017 at 1:00 PM</h5>
+                                                    <p>All looks good. Thank you.</p>
+                                                 </div>
+
+                                                 <div class="panel-box reply-box">
+                                                    <div class="row">
+                                                       <div class="col-lg-12">
+                                                          <label class="control-label" for="text-area"><strong>Send Reply:</strong></label>
+                                                          <textarea class="form-control requiredfield" maxlength="4000" spellcheck="true" rows="8" cols="20"></textarea>
+                                                       </div>
+                                                    </div>
+
+                                                    <div class="row">
+                                                       <div class="col-lg-6 col-md-6 col-sm-6">
+                                                          <button type="button" id="clear-filters" name="clear-filters" class="btn btn-danger spacer20" data-toggle="modal" data-target="#submit-reply">Close Ticket</button>
+                                                       </div>
+                                                       <div class="col-lg-6 col-md-6 col-sm-6 text-right">
+                                                          <button id="clear-filters" name="clear-filters" class="btn btn-primary spacer20">Submit Reply</button>
+                                                       </div>
+                                                    </div>
+
+                                                 </div>
+                                              </div>
+                                           </div>
+                                        </div>
+
+
+                                    </div>
+
+                                    <div class="modal-footer">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Modal -->
+
+                        <!-- Help Request Modal -->
+                        <div id="help-request-closed" class="modal fade" role="dialog">
+                            <div class="modal-dialog modal-lg">
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Submit Help Request</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        
+                                        <div class="panel panel-default">
+                                           <div class="panel-heading" role="tab" id="heading1">
+                                              <h4 class="panel-title">
+                                                    <div class="row">
+                                                       <div class="col-lg-6">
+                                                          <strong class="panel-sub">Name: </strong>Chris Robertson
+                                                       </div>
+                                                       <div class="col-lg-6">
+                                                          <strong class="panel-sub">Form in Question: </strong> Branch Rep Post Meeting
+                                                       </div>
+                                                    </div>
+                                                 </a>
+                                              </h4>
+                                           </div>
+
+                                            <div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
+                                                <div class="panel-body">
+
+                                                    <div class="panel-box">
+                                                        <h5>Chris Robertson 1/26/2021 at 12:28 PM</h5>
+                                                        <p>I was submitting the form and received the error contact administrator. I am contacting the administrator.</p>
+                                                    </div>
+
+                                                    <div class="panel-box">
+                                                        <h5>Bradley Webb 1/27/2021 at 9:28 AM</h5>
+                                                        <p>Can you try re-submitting the form now? We fixed one issue on our end and need to verify.</p>
+                                                    </div>
+
+                                                    <div class="panel-box">
+                                                        <h5>Chris Robertson 1/28/2017 at 1:00 PM</h5>
+                                                        <p>All looks good. Thank you.</p>
+                                                    </div>
+                                                </div>
+                                           </div>
                                         </div>
                                     </div>
 
                                     <div class="modal-footer">
-                                        <button id="cancel" name="cancel" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
 
-                                        <div class="dropdown">
-                                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Submit Reply
-                                            <span class="caret"></span></button>
-                                            <ul class="dropdown-menu pull-right">
-                                                <li><a href="#">Submit Reply</a></li>
-                                                <li><a href="#">Close Ticket</a></li>
-                                            </ul>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
